product image overlaps text fix

--- a/assets/swiper.css
+++ b/assets/swiper.css
@@ -23,6 +23,11 @@
     max-height: 72vh;
     width: auto;
     margin-top: 100px;
+    overflow: hidden;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-auto-rows: minmax(auto, 72vh);
 }
 
 @media (max-width: 1392px) {
